syntax = "proto3";

package linkflow.history.v1;

option go_package = "github.com/linkflow/engine/gen/proto/linkflow/history/v1;historyv1";

import "google/protobuf/timestamp.proto";
import "linkflow/common/v1/enums.proto";
import "linkflow/common/v1/message.proto";
import "linkflow/history/v1/events.proto";

// HistoryService is the internal service for managing workflow history.
service HistoryService {
  // RecordEvent records a new event in the workflow history.
  rpc RecordEvent(RecordEventRequest) returns (RecordEventResponse);

  // GetHistory retrieves the history of a workflow execution.
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse);

  // GetMutableState retrieves the mutable state of a workflow execution.
  rpc GetMutableState(GetMutableStateRequest) returns (GetMutableStateResponse);

  // ResetExecution resets a workflow execution to a specific point.
  rpc ResetExecution(ResetExecutionRequest) returns (ResetExecutionResponse);
}

// RecordEventRequest is the request for recording a history event.
message RecordEventRequest {
  string namespace = 1;
  linkflow.common.v1.WorkflowExecution workflow_execution = 2;
  HistoryEvent event = 3;
}

// RecordEventResponse is the response for recording a history event.
message RecordEventResponse {
  int64 event_id = 1;
}

// GetHistoryRequest is the request for getting workflow history.
message GetHistoryRequest {
  string namespace = 1;
  linkflow.common.v1.WorkflowExecution workflow_execution = 2;
  int64 first_event_id = 3;
  int64 next_event_id = 4;
  int32 page_size = 5;
  bytes next_page_token = 6;
  bool skip_archival = 7;
}

// GetHistoryResponse is the response for getting workflow history.
message GetHistoryResponse {
  History history = 1;
  bytes next_page_token = 2;
  bool archived = 3;
}

// GetMutableStateRequest is the request for getting mutable state.
message GetMutableStateRequest {
  string namespace = 1;
  linkflow.common.v1.WorkflowExecution workflow_execution = 2;
  int64 expected_next_event_id = 3;
  bytes current_branch_token = 4;
}

// GetMutableStateResponse is the response for getting mutable state.
message GetMutableStateResponse {
  linkflow.common.v1.WorkflowExecution workflow_execution = 1;
  string workflow_type = 2;
  int64 next_event_id = 3;
  int64 previous_started_event_id = 4;
  int64 last_first_event_id = 5;
  string task_queue = 6;
  string sticky_task_queue = 7;
  linkflow.common.v1.ExecutionStatus workflow_status = 8;
  bytes branch_token = 9;
  bool is_sticky_task_queue_enabled = 10;
  int64 history_size = 11;
  google.protobuf.Timestamp last_update_time = 12;
}

// ResetExecutionRequest is the request for resetting a workflow execution.
message ResetExecutionRequest {
  string namespace = 1;
  linkflow.common.v1.WorkflowExecution workflow_execution = 2;
  string reason = 3;
  int64 reset_event_id = 4;
  string request_id = 5;
  bool reset_reapply_type = 6;
}

// ResetExecutionResponse is the response for resetting a workflow execution.
message ResetExecutionResponse {
  string run_id = 1;
}
